Modify textarea placeholder for player list
Updated textarea placeholder to use line breaks for clarity.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
         One per line: <code>playerName,rating</code> (example: <code>player1,3.5</code>)
       </div>
 
-      <textarea id="playerList" class="player-textarea" placeholder="player1,3.5\nplayer2,4.0\nplayer3,3.0"></textarea>
+      <textarea id="playerList" class="player-textarea" placeholder="player1,3.5
+player2,4.0
+player3,3.0"></textarea>
       <div class="error-message" id="playerErrorMessage"></div>
       <div class="success-message" id="playerSuccessMessage"></div>
     </div>
